<resources>
    <string name="app_name">GSoC 2020</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="or">Or</string>
    <string name="create_an_account">Create an account</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="sample_election_name">Vidhan Sabha Elections</string>
    <string name="sample_start_date">From: 15 April 2020</string>
    <string name="sample_end_date">To: 20 April 2020</string>
    <string name="description">Description</string>
    <string name="sample_election_description">Every adult citizen of India can vote only in their constituency. Candidates who win the State Legislative Assemblies elections are called \'Member of Legislative Assembly\' (MLA) and hold their seats for five years or until the body is dissolved by the Governor.</string>
    <string name="sample_candidate_name">Arvind Kejriwal</string>
    <string name="details">D\nE\nT\nA\nI\nL\nS</string>
    <string name="election_name">Election Name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="candidates">Candidates</string>
    <string name="no_algorithm_selected_yet">No algorithm selected yet!</string>
    <string name="invite_voters">Invite Voters</string>
    <string name="get_real_time_results">Get real time results</string>
    <string name="how_secret_are_your_ballots">How secret are your ballots?</string>
    <string name="secret_visibility">completely secret and not visible to anyone</string>
    <string name="only_to_me_visibility">Visible only to me</string>
    <string name="everyone_with_access_visibility">Visible to everyone with access</string>
    <string name="visibility_of_voters_list">Visibility of voters list</string>
    <string name="sample_initial">I</string>
    <string name="sample_name">Ishita Aggarwal</string>
    <string name="report_a_bug_desc">Feel free to raise an issue. Our team will work to solve the problem as as possible</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="update">Update</string>
    <string name="about_agora_desc">Agora is a voting platform where users can create elections and invite friends to cast their votes. It supports a wide range of voting algorithms .</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forget_pass_desc">Please enter your username and we will send you password reset link</string>
    <string name="two_factor_authentication">Two Factor Authentication</string>
    <string name="please_check_your_mailbox_for_otp">Please check your mailbox for otp</string>
    <string name="otp">OTP</string>
    <string name="caste_your_vote">Caste Your Vote</string>
    <string name="vote">Vote</string>
    <string name="total_elections">Total Elections</string>
    <string name="sample_election_no">60</string>
    <string name="ballot">Ballot</string>
    <string name="voter_list">Voter List</string>
    <string name="sample_voting_algo">Voting Algorithm: Oklahoma</string>
    <string name="sample_total_voters">Total Voters:100</string>
    <string name="sample_ballot">Total Ballots: 60</string>
    <string name="name_of_the_voter">Name of the voter</string>
    <string name="add_voter">Add voter</string>
    <string name="invite_voters">Invite Voters</string>
    <string name="invite">Invite</string>
    <string name="sample_contact_us_desc">Feel free to contact us on gitter channels and work with us on gitlab</string>
    <string name="aossie_s_gitlab">AOSSIE\'S Gitlab</string>
    <string name="aossie_s_gitter">AOSSIE\'S Gitter</string>
    <string name="sample_voter_name">Ekta Aggarwal</string>
    <string name="sample_email_voter">xyz@gmail.com</string>
</resources>
