<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/create_elections_background" />

    <TextView
        android:id="@+id/textView29"
        style="@style/create_elections_details_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/finish_btn"
        style="@style/next_btn_style"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_tick" />

    <RadioButton
        android:id="@+id/radioButton"
        style="@style/radio_btn_txt_style"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="24dp"
        android:text="@string/invite_voters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton2"
        style="@style/radio_btn_txt_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/get_real_time_results"
        app:layout_constraintEnd_toEndOf="@+id/radioButton"
        app:layout_constraintStart_toStartOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_rectangle_11dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/view10"
        app:layout_constraintEnd_toEndOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton2"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rectangle_11dp"
        app:layout_constraintBottom_toTopOf="@+id/finish_btn"
        app:layout_constraintEnd_toEndOf="@+id/radioButton2"
        app:layout_constraintStart_toStartOf="@+id/radioButton2"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        tools:elevation="1dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="1dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/how_secret_are_your_ballots"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <RadioButton
        android:id="@+id/secret_vis_ballot_btn"
        style="@style/radio_btn_txt_style2"
        android:text="@string/secret_visibility"
        app:layout_constraintBottom_toTopOf="@id/me_vis_ballot_btn"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <RadioButton
        android:id="@+id/me_vis_ballot_btn"
        style="@style/radio_btn_txt_style2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/only_to_me_visibility"
        app:layout_constraintBottom_toTopOf="@id/everyone_vis_ballot_btn"
        app:layout_constraintEnd_toEndOf="@+id/secret_vis_ballot_btn"
        app:layout_constraintStart_toStartOf="@+id/secret_vis_ballot_btn"
        app:layout_constraintTop_toBottomOf="@+id/secret_vis_ballot_btn" />

    <RadioButton
        android:id="@+id/everyone_vis_ballot_btn"
        style="@style/radio_btn_txt_style2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:elevation="1dp"
        android:text="@string/everyone_with_access_visibility"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="@+id/secret_vis_ballot_btn"
        app:layout_constraintStart_toStartOf="@+id/secret_vis_ballot_btn"
        app:layout_constraintTop_toBottomOf="@+id/me_vis_ballot_btn" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="1dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/visibility_of_voters_list"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/view10"
        app:layout_constraintTop_toTopOf="@+id/view10" />

    <RadioButton
        android:id="@+id/me_vis_voters_btn"
        style="@style/radio_btn_txt_style2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="1dp"
        android:text="@string/only_to_me_visibility"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/everyone_vis_voters_btn"
        app:layout_constraintEnd_toEndOf="@+id/view10"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <RadioButton
        android:id="@+id/everyone_vis_voters_btn"
        style="@style/radio_btn_txt_style2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:elevation="1dp"
        android:text="@string/everyone_with_access_visibility"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view10"
        app:layout_constraintEnd_toEndOf="@+id/me_vis_voters_btn"
        app:layout_constraintStart_toStartOf="@+id/me_vis_voters_btn"
        app:layout_constraintTop_toBottomOf="@+id/me_vis_voters_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>