<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_11dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView33"
        style="@style/form_field_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/profile_first_name"
        app:layout_constraintEnd_toEndOf="@+id/profile_first_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_last_name"
        style="@style/edit_text_style_2"
        app:layout_constraintEnd_toEndOf="@+id/profile_first_name"
        app:layout_constraintStart_toStartOf="@+id/profile_first_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_first_name" />

    <TextView
        android:id="@+id/textView34"
        style="@style/form_field_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/profile_last_name"
        app:layout_constraintEnd_toEndOf="@+id/profile_last_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_last_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText4"
        style="@style/edit_text_style_2"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/profile_last_name"
        app:layout_constraintStart_toStartOf="@+id/profile_last_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_last_name" />

    <TextView
        android:id="@+id/textView36"
        style="@style/form_field_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText5"
        style="@style/edit_text_style_2"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <TextView
        android:id="@+id/textView37"
        style="@style/form_field_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/e_mail_address"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText5" />

    <TextView
        android:id="@+id/textView38"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        style="@style/update_btn_style" />
</androidx.constraintlayout.widget.ConstraintLayout>