<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caste_vote_background" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/caste_your_vote"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintEnd_toStartOf="@+id/textView52"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView52"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/ic_cancel" />

    <View
        android:id="@+id/view13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/upper_corner_rounded_rectangle_24dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <View
        android:id="@+id/view14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rectangle_11dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <TextView
        android:id="@+id/vote_election_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="1dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/sample_election_name"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/view14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view14"
        app:layout_constraintTop_toTopOf="@+id/view14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <TextView
        android:id="@+id/vote_election_desc"
        style="@style/details_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="1dp"
        android:text="@string/sample_election_description"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/vote_start_date"
        app:layout_constraintEnd_toEndOf="@+id/view14"
        app:layout_constraintStart_toStartOf="@+id/vote_election_name"
        app:layout_constraintTop_toBottomOf="@+id/vote_election_name" />

    <TextView
        android:id="@+id/vote_start_date"
        style="@style/date_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/sample_start_date"
        app:layout_constraintBottom_toBottomOf="@+id/view14"
        app:layout_constraintEnd_toStartOf="@+id/vote_end_date"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/vote_election_desc"
        app:layout_constraintTop_toBottomOf="@+id/vote_election_desc" />

    <TextView
        android:id="@+id/vote_end_date"
        style="@style/date_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/sample_end_date"
        app:layout_constraintBottom_toBottomOf="@+id/vote_start_date"
        app:layout_constraintEnd_toEndOf="@+id/vote_election_desc"
        app:layout_constraintStart_toEndOf="@id/vote_start_date"
        app:layout_constraintTop_toTopOf="@+id/vote_start_date" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="1dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/candidates"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view13" />

    <TextView
        android:id="@+id/vote_btn"
        style="@style/update_btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorDarkerGreen"
        android:elevation="1dp"
        android:text="@string/vote"
        app:layout_constraintBottom_toBottomOf="@+id/imageView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vote_candidates_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/vote_btn"
        app:layout_constraintEnd_toEndOf="@+id/view13"
        app:layout_constraintStart_toStartOf="@+id/view13"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />
</androidx.constraintlayout.widget.ConstraintLayout>